--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@mui/x-tree-view": "^6.17.0",
         "@reduxjs/toolkit": "^2.2.1",
         "@tabler/icons-react": "^2.47.0",
+        "@tanstack/react-query": "^5.22.2",
+        "@tanstack/react-query-devtools": "^5.22.2",
         "@vitejs/plugin-react": "^4.2.1",
         "amazon-cognito-identity-js": "^6.3.7",
         "apexcharts": "^3.46.0",
